implementacion del header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--escribimos lo que necesitamos-->
+    <!--header-->
+    <header>
+        <nav>
+            <i href="">home</i>
+            <i>about</i>
+            <i>contact</i>
+            <i>blog</i>
+        </nav>
+    </header>
 </body>
 </html>
